...
                          scaffoldSheetState.bottomSheetState.hide()
                          expanded.value = false
                      }
                  }
                  lastClicked.value = curScreen.toString()
              })
          }.testTag("RootScaffold"),
          contentColor = Color.Black,
          topBar = {
              TopBar(errorText, warningText, noticeText, lastClicked)
          },
          bottomBar = {
              if (showBottomBar)
...
